--- a/angular.json
+++ b/angular.json
@@ -54,6 +54,15 @@
 				    "maximumError": "5mb"
 				}
 			    ]
+			},
+
+			"backend": {
+			    "fileReplacements": [
+				{
+				    "replace": "src/environments/environment.ts",
+				    "with": "src/environments/environment.backend.ts"
+				}
+			    ]
 			}
 		    }
 		},
@@ -65,7 +74,12 @@
 		    "configurations": {
 			"production": {
 			    "browserTarget": "app-ng-boostrap:build:production"
+			},
+			
+			"backend": {
+			    "browserTarget": "app-ng-boostrap:build:backend"
 			}
+
 		    }
 		},
 		"extract-i18n": {
